[project]
name = "bylearn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.5",
    "loguru>=0.7.3",
    "pandas>=3.0.0",
    "pyautogui>=0.9.54",
    "pymysql>=1.1.2",
    "pyside6>=6.10.2",
    "pyside6-stubs>=6.7.3.0",
    "sqlalchemy>=2.0.46",
    "tabulate>=0.9.0",
]
